      bind parameters.   Internal checks for this condition would
      add significant latency to the critical task of parameter 
      rendering, so the behavior is removed.  This is a backwards
      incompatible change for any application that may have been
      using this feature, however the feature has never been
      documented.
    
0.5.4p2
=======

- sql
    - Repaired the printing of SQL exceptions which are not 
      based on parameters or are not executemany() style.
      
- postgres
    - Deprecated the hardcoded TIMESTAMP function, which when
      used as func.TIMESTAMP(value) would render "TIMESTAMP value".
      This breaks on some platforms as Postgres doesn't allow
      bind parameters to be used in this context.  The hard-coded
      uppercase is also inappropriate and there's lots of other
      PG casts that we'd need to support.  So instead, use
      text constructs i.e. select(["timestamp '12/05/09'"]).
      
      
0.5.4p1
=======

- orm
    - Fixed an attribute error introduced in 0.5.4 which would 
      occur when merge() was used with an incomplete object.
    
0.5.4
=====

- orm
    - Significant performance enhancements regarding Sessions/flush()
      in conjunction with large mapper graphs, large numbers of 
      objects:
      
      - Removed all* O(N) scanning behavior from the flush() process,
        i.e. operations that were scanning the full session, 
        including an extremely expensive one that was erroneously
        assuming primary key values were changing when this 
        was not the case.
        
        * one edge case remains which may invoke a full scan,
          if an existing primary key attribute is modified
          to a new value.
      
      - The Session's "weak referencing" behavior is now *full* -
        no strong references whatsoever are made to a mapped object
        or related items/collections in its __dict__.  Backrefs and 